inventory/db updates

--- a/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 </div>
 <footer>
     <div>
-        Last Updated: 11/12/2024 19:34
+        Last Updated (UTC): @Model.LatestUpdated
     </div>
 </footer>
 
