--- a/ChainVisionApp/ChainVisionApp/Views/Shared/_Layout.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Shared/_Layout.cshtml
@@ -32,13 +32,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="News">
+                    <a class="nav-link" asp-area="" asp-controller="News" asp-action="Index">
                         <i class="fa-solid fa-newspaper"></i>&emsp;News
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">
-                        <i class="fa-solid fa-address-book"></i>&emsp;Contact
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">
+                        <i class="fa-solid fa-address-book"></i>&emsp;About Us
                     </a>
                 </li>
             </ul>
