--- a/ChainVisionApp/ChainVisionApp/Views/Shared/_Layout.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ChainVisionApp.styles.css" asp-append-version="true" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -44,7 +46,7 @@
             </ul>
             <p class="powered">© Powered by FGF Brands 2024</p>
         </nav>
-        <main class="col-md-9 col-lg-10 ms-sm-auto px-md-4 body-content">
+        <main class="col-md-9 col-lg-10 ms-sm-auto body-content">
             <div class="pb-3">
                 @RenderBody()
             </div>
