fix back button

--- a/ChainVisionApp/ChainVisionApp/Views/Products/Details.cshtml
+++ b/ChainVisionApp/ChainVisionApp/Views/Products/Details.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container-fluid detail-container">
-    <a class="back-btn" href="https://localhost:7278/Products">
+    <a class="back-btn" href="~/Products">
         <i class="fa-solid fa-circle-chevron-left"></i>
     </a>
     <h1 class="title">@Model.ProductName</h1>
